chore: add css from template to menu widget, fix list wrapping to new line, improve nesting (#624)

--- a/src/Widgets/Menu/backend_style.css
+++ b/src/Widgets/Menu/backend_style.css
@@ -1,3 +1,44 @@
+.menu_node {
+    position: relative;
+    transition: all 0.3s ease;
+    background: rgba(0,0,0,0.1);
+    margin-bottom: 1rem;
+}
+.menu_node.selected {
+    outline: 2px solid orange;
+}
+#menu_designer_tree.menu_node {
+    border:none;
+    margin:0;
+    padding:0;
+    padding-top:0;
+    background:transparent;
+}
+.menu_node_info {
+    pointer-events: none;
+    padding:1rem;
+}
+.menu_node_info .menu_designer_node_title {
+    margin-bottom:0;
+}
+
+.insertbefore {
+    box-shadow: inset 0 10px 0 0 #0a0;
+}
+.insertafter {
+    box-shadow: inset 0 -10px 0 0 #0a0;
+}
+.insertinside {
+    box-shadow: inset -10px 0 0 0 #0a0;
+}
+.insertbefore, .insertafter, .insertinside {
+    transform:scale(1.02);
+}
+
+.menu_node .menu_node {
+    margin-left: 1rem;
+}
+
 #menu_designer_page_listing {
     max-width: 25rem;
 
@@ -29,4 +70,8 @@
     #menu_desiger_add_pages {
         display: none;
     }
+}
+
+#menu_designer_tree {
+    max-width: 40rem;
 }
